@@ -15,6 +15,7 @@ import Itstime.planear.shop.dto.process.WearingItemProcessDto;
 import Itstime.planear.shop.dto.request.ApplyItemRequestDto;
 import Itstime.planear.shop.dto.request.BuyItemRequestDto;
 import Itstime.planear.shop.dto.request.CreateItemRequestDto;
+import Itstime.planear.shop.dto.request.SaveImgUrlRequestDto;
 import Itstime.planear.shop.dto.response.*;
 import Itstime.planear.shop.repository.ItemRepository;
 import Itstime.planear.shop.repository.PurchaseRepository;
@@ -22,12 +23,15 @@ import Itstime.planear.shop.repository.WearingRepsitory;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 @Service
+@Transactional(readOnly = true)
 @RequiredArgsConstructor
 public class ShopService {
 
@@ -36,35 +40,34 @@ public class ShopService {
     private final WearingRepsitory wearingRepsitory;
     private final PurchaseRepository purchaseRepository;
 
-    public Member checkByMemberId(Long memberId){ // member 객체 검색
-        return memberRepository.findById(memberId)
-                .orElseThrow(() ->
-                        new PlanearException("잠시 문제가 생겼어요 문제가 반복되면, 연락주세요", HttpStatus.NOT_FOUND));
-    }
-
-    public boolean existByMemberId(Long memberId){
-        return memberRepository.existsById(memberId);
-    } // member 존재여부
 
     // 부위별 아이템 목록 조회
     public ApiResponse<ItemListResponseDto> itemListByCategory(Long categoryId, Long memberId){
         if(!existByMemberId(memberId)){
             throw new PlanearException("잠시 문제가 생겼어요 문제가 반복되면, 연락주세요", HttpStatus.NOT_FOUND);
         }
-        else{
-            BodyPart bodyPart = BodyPart.fromValue(categoryId.intValue());
-            List<Item> itemList = itemRepository.findByBodyPart(bodyPart);
-            List<ItemListProcessDto> listProcessDto = itemList.stream()
-                    .map(item -> ItemListProcessDto.builder()
-                            .id(item.getId())
-                            .url(item.getImg_url())
-                            .price(item.getPrice())
-                            .has(wearingRepsitory.existsByMemberIdAndItem(memberId, item))  // 추후 코드 리팩토링
-                            .build()).collect(Collectors.toList());
+        BodyPart bodyPart = BodyPart.fromValue(categoryId.intValue());
+        List<Item> itemList = itemRepository.findByBodyPart(bodyPart);
+        // 멤버가 보유한 아이템 목록 조회
+        List<Item> purchaseItemList = purchaseRepository.findItemsByMemberId(memberId);
+        // 보유한 아이템 ID 정보 hash set 생성
+        Set<Long> itemIdSet = purchaseItemList.stream().map(Item::getId).collect(Collectors.toSet());
+        List<ItemListProcessDto> listProcessDto = itemList.stream()
+                .map(item -> ItemListProcessDto.builder()
+                        .id(item.getId())
+                        .url(item.getImg_url())
+                        .price(item.getPrice())
+                        .has(itemIdSet.contains(item.getId())) // 시간복잡도 O(1)
+                        .build()).toList();
+
         return ApiResponse.success(new ItemListResponseDto(listProcessDto));
-        }
     }
 
+    private boolean existByMemberId(Long memberId){
+        return memberRepository.existsById(memberId);
+    } // member 존재여부
+
+    @Transactional
     public ApiResponse<CreateItemResponseDto> createItem(CreateItemRequestDto dto){
         BodyPart bodyPart = BodyPart.fromValue(dto.bodyPart().intValue()); // BodyPart Long -> 객체로 변환
         Item newItem = new Item(dto.price(), bodyPart, dto.img_url());
@@ -72,6 +75,7 @@ public class ShopService {
         return ApiResponse.success(new CreateItemResponseDto("success"));
     }
 
+    @Transactional
     public ApiResponse<BuyItemResponseDto> buyItem(Long memberId, BuyItemRequestDto dto){
         Member member = checkByMemberId(memberId); // 멤버 확인
         // 상점에 존재하는 아이템인지 확인
@@ -106,11 +110,12 @@ public class ShopService {
         List<WearingItemProcessDto> responseDto = wearingList.stream().map(wearing -> WearingItemProcessDto.builder()
                 .id(wearing.getItem().getId())
                 .url(wearing.getItem().getImg_url())
-                .categoryId((long) wearing.getBodyPart().getValue())
+                .bodyPart(wearing.getBodyPart())
                 .build()).toList();
         return ApiResponse.success(new WearingItemListResponseDto(responseDto));
     }
 
+    @Transactional
     public ApiResponse<ApplyItemResponseDto> applyItem(Long memberId, ApplyItemRequestDto dto){
         Member member = checkByMemberId(memberId); // 멤버 확인
         Item item = itemRepository.findById(dto.itemId()) // 아이템 확인
@@ -129,4 +134,17 @@ public class ShopService {
         return ApiResponse.success(new ApplyItemResponseDto("success"));
     }
 
+    private Member checkByMemberId(Long memberId){ // member 객체 검색, 응집성 고려하여 메소드 위치이동
+        return memberRepository.findById(memberId)
+                .orElseThrow(() ->
+                        new PlanearException("잠시 문제가 생겼어요 문제가 반복되면, 연락주세요", HttpStatus.NOT_FOUND));
+    }
+
+    @Transactional
+    public ApiResponse<CommonResponseDto> updateImgUrl(SaveImgUrlRequestDto dto){
+        Item item = itemRepository.findById(dto.itemId()).orElseThrow(
+                () -> new PlanearException("잠시 문제가 생겼어요 문제가 반복되면, 연락주세요", HttpStatus.NOT_FOUND));
+        item.updateImg_url(dto.url());
+        return ApiResponse.success(new CommonResponseDto("success"));
+    }
 }
